--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -22,20 +22,23 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Install Android build tools
+      - name: Accept Android SDK licenses
+        run: yes | sdkmanager --licenses
+
+      - name: Install Android platforms & build-tools
         run: |
           sdkmanager "platforms;android-34" "build-tools;34.0.0" "platform-tools" >/dev/null
 
-      # Używamy Gradle 8.4 bez wrappera
-      - name: Download Gradle 8.4
+      # 👉 Pobieramy i używamy Gradle 8.6 (bez wrappera, wrapper nie jest potrzebny)
+      - name: Download Gradle 8.6
         run: |
-          curl -sL https://services.gradle.org/distributions/gradle-8.4-bin.zip -o gradle.zip
+          curl -sL https://services.gradle.org/distributions/gradle-8.6-bin.zip -o gradle.zip
           unzip -q gradle.zip -d $HOME/gradle
-          echo "$HOME/gradle/gradle-8.4/bin" >> $GITHUB_PATH
+          echo "$HOME/gradle/gradle-8.6/bin" >> $GITHUB_PATH
+          gradle -v
 
       - name: Build debug APK
-        run: |
-          gradle assembleDebug
+        run: gradle --no-daemon assembleDebug
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
