--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -10,15 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1) Pobranie repo
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 2) JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
 
+      # 3) Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
@@ -29,7 +32,7 @@ jobs:
         run: |
           sdkmanager "platforms;android-34" "build-tools;34.0.0" "platform-tools" >/dev/null
 
-      # 🔧 DODANE: utworzenie gradle.properties z AndroidX
+      # 4) Ustawienia AndroidX + Jetifier (brak pliku w repo – tworzymy)
       - name: Configure gradle.properties (AndroidX + Jetifier)
         run: |
           cat > gradle.properties <<'EOF'
@@ -40,7 +43,16 @@ jobs:
           echo "Created gradle.properties:"
           cat gradle.properties
 
-      # Gradle 8.6 bez wrappera
+      # 5) Pobierz bibliotekę Spotify App Remote jako AAR (bez maven.spotify.com)
+      - name: Download Spotify App Remote AAR
+        run: |
+          mkdir -p app/libs
+          curl -L \
+            https://github.com/spotify/android-sdk/releases/download/0.8.0-appremote/spotify-app-remote-release-0.8.0.aar \
+            -o app/libs/spotify-app-remote-release-0.8.0.aar
+          ls -l app/libs
+
+      # 6) Gradle 8.6 (bez wrappera)
       - name: Download Gradle 8.6
         run: |
           curl -sL https://services.gradle.org/distributions/gradle-8.6-bin.zip -o gradle.zip
@@ -48,9 +60,11 @@ jobs:
           echo "$HOME/gradle/gradle-8.6/bin" >> $GITHUB_PATH
           gradle -v
 
+      # 7) Build APK (debug)
       - name: Build debug APK
         run: gradle --no-daemon assembleDebug
 
+      # 8) Artefakt do pobrania
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
