--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,6 @@ dependencies {
 
     implementation "androidx.browser:browser:1.8.0"
 
-    implementation files('libs/spotify-app-remote-release-0.8.0.aar')
+    implementation 'com.spotify.android:spotify-app-remote:0.8.0'
 
 }
