--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,9 @@ dependencies {
     implementation "androidx.camera:camera-view:1.3.3"
 
     implementation 'com.google.mlkit:barcode-scanning:17.2.0'
-
     implementation "androidx.browser:browser:1.8.0"
 
-    implementation 'com.spotify.android:spotify-app-remote:0.8.0'
-
+    // Spotify z lokalnego pliku AAR w katalogu app/libs
+    implementation files('libs/spotify-app-remote-release-0.8.0.aar')
 }
+
