--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Cache Gradle (szybsze kolejne buildy)
-      - name: Setup Gradle cache
+      - name: Cache Gradle
         uses: actions/cache@v4
         with:
           path: |
@@ -20,18 +19,15 @@ jobs:
           key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle.properties') }}
           restore-keys: gradle-${{ runner.os }}-
 
-      # Repo
       - name: Checkout
         uses: actions/checkout@v4
 
-      # JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '17'
 
-      # Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
@@ -42,18 +38,18 @@ jobs:
         run: |
           sdkmanager "platforms;android-34" "build-tools;34.0.0" "platform-tools" >/dev/null
 
-      # gradle.properties (AndroidX + Jetifier)
+      # kluczowe: AndroidX tak, Jetifier NIE (to Jetifier produkował „jetified-…AAR/AndroidManifest.xml”)
       - name: Configure gradle.properties
         run: |
           cat > gradle.properties <<'EOF'
           org.gradle.jvmargs=-Xmx4g -Dkotlin.daemon.jvm.options=-Xmx2g
           android.useAndroidX=true
-          android.enableJetifier=true
+          android.enableJetifier=false
           EOF
           echo "gradle.properties:"
           cat gradle.properties
 
-      # (Opcjonalnie) sanitacja layoutów XML (usuwa BOM i XML prolog)
+      # (opcjonalnie) sanitacja własnych layoutów XML
       - name: Sanitize XML layouts (remove BOM and XML prolog)
         run: |
           set -e
@@ -62,7 +58,15 @@ jobs:
             find app/src/main/res/layout -name "*.xml" -print0 | xargs -0 -I{} bash -c 'sed -i "1{/^<\\?xml/d;}" "{}"'
           fi
 
-      # Gradle 8.6 (bez wrappera)
+      # pobranie oficjalnego AAR Spotify App Remote 0.8.0 i wgranie do app/libs
+      - name: Download Spotify App Remote AAR
+        run: |
+          mkdir -p app/libs
+          curl -L \
+            https://github.com/spotify/android-sdk/releases/download/0.8.0-appremote/spotify-app-remote-release-0.8.0.aar \
+            -o app/libs/spotify-app-remote-release-0.8.0.aar
+          ls -l app/libs
+
       - name: Download Gradle 8.6
         run: |
           curl -sL https://services.gradle.org/distributions/gradle-8.6-bin.zip -o gradle.zip
@@ -70,14 +74,12 @@ jobs:
           echo "$HOME/gradle/gradle-8.6/bin" >> $GITHUB_PATH
           gradle -v
 
-      # Clean & Build (debug)
       - name: Clean
         run: gradle --no-daemon clean
 
       - name: Build debug APK
         run: gradle --no-daemon assembleDebug
 
-      # Artefakt APK
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
