--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,45 +1,36 @@
-
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace 'com.slawomirkedra.qrmusic'
+    namespace "com.slawomirkedra.qrmusic"
     compileSdk 34
 
+    // KLUCZOWE dla tego AAR (usuwa błąd transform/AAPT2)
+    buildToolsVersion "33.0.2"
+
     defaultConfig {
-        applicationId 'com.slawomirkedra.qrmusic'
+        applicationId "com.slawomirkedra.qrmusic"
         minSdk 24
         targetSdk 34
         versionCode 1
         versionName "1.0"
-
-        vectorDrawables.useSupportLibrary = true
     }
-    // na wszelki wypadek – unika konfliktów zasobów z AAR
+
+    // unika kolizji META-INF w starych AAR-ach
     packagingOptions {
         resources {
             excludes += ["META-INF/*"]
         }
     }
+}
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = '17'
-    }
-    buildFeatures {
-        viewBinding true
-    }
+// --- REPOZYTORIA (AAR z app/libs przez flatDir)
+repositories {
+    google()
+    mavenCentral()
+    flatDir { dirs 'libs' }
 }
 
 dependencies {
@@ -58,7 +49,6 @@ dependencies {
     implementation 'com.google.mlkit:barcode-scanning:17.2.0'
     implementation "androidx.browser:browser:1.8.0"
 
-    // Spotify z lokalnego pliku AAR w katalogu app/libs
-    implementation files('libs/spotify-app-remote-release-0.8.0.aar')
+    // >>> Spotify App Remote – AAR pobierany w workflow do app/libs <<<
+    implementation(name: 'spotify-app-remote-release-0.8.0', ext: 'aar')
 }
-
