--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -11,7 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Dark.NoActionBar">
 
-        <!-- Powrót z autoryzacji Spotify -->
         <activity
             android:name="com.slawomirkedra.qrmusic.AuthRedirectActivity"
             android:exported="true">
@@ -19,22 +19,18 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data
-                    android:scheme="qrmusicapp"
-                    android:host="callback" />
+                <data android:scheme="qrmusicapp" android:host="callback" />
             </intent-filter>
         </activity>
 
-        <!-- Ekran główny -->
         <activity
             android:name="com.slawomirkedra.qrmusic.MainActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
     </application>
-
 </manifest>
