--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,16 @@
 pluginManagement {
     repositories {
+        gradlePluginPortal()
         google()
         mavenCentral()
-        gradlePluginPortal()
+    }
+    plugins {
+        // WERSJE pluginów – dopisz to!
+        id("com.android.application") version "8.4.2"
+        id("org.jetbrains.kotlin.android") version "1.9.24"
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -12,5 +18,6 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
+
 rootProject.name = "QrMusicHitsterApp"
 include(":app")
