--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+# JVM/Gradle
 org.gradle.jvmargs=-Xmx4g -Dkotlin.daemon.jvm.options=-Xmx2g
+
+# AndroidX on, jetifier off (ułatwia życie ze starym AAR Spotify)
 android.useAndroidX=true
 android.enableJetifier=false
