--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id("com.android.application")
+    id("org.jetbrains.kotlin.android")
 }
 
 android {
     namespace "com.slawomirkedra.qrmusic"
     compileSdk 34
-    buildToolsVersion "33.0.2"
 
     defaultConfig {
         applicationId "com.slawomirkedra.qrmusic"
@@ -16,36 +15,55 @@ android {
         versionName "1.0"
     }
 
-    packagingOptions {
-        resources {
-            excludes += ["META-INF/*"]
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles(
+                getDefaultProguardFile("proguard-android-optimize.txt"),
+                "proguard-rules.pro"
+            )
         }
+        debug {
+            // zostaw domyślnie
+        }
+    }
+
+    buildFeatures {
+        viewBinding true
+        // jeśli używasz data binding:
+        // dataBinding true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+
+    packaging {
+        // dla spokoju przy starszych AAR
+        resources.excludes += [ "META-INF/*" ]
     }
 }
 
-repositories {
-    google()
-    mavenCentral()
-    flatDir { dirs 'libs' }
-}
-
 dependencies {
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.activity:activity-ktx:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    // --- Spotify App Remote (AAR musi fizycznie być w app/libs)
+    implementation(files("libs/spotify-app-remote-release-0.8.0.aar"))
 
-    // CameraX
+    // --- AndroidX / UI
+    implementation("androidx.core:core-ktx:1.13.1")
+    implementation("androidx.appcompat:appcompat:1.7.0")
+    implementation("com.google.android.material:material:1.12.0")
+
+    // --- (opcjonalnie) CameraX / MLKit / Browser – jeśli ich używasz:
     def camerax_version = "1.3.3"
-    implementation "androidx.camera:camera-core:$camerax_version"
-    implementation "androidx.camera:camera-camera2:$camerax_version"
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:$camerax_version"
+    implementation("androidx.camera:camera-core:$camerax_version")
+    implementation("androidx.camera:camera-camera2:$camerax_version")
+    implementation("androidx.camera:camera-lifecycle:$camerax_version")
+    implementation("androidx.camera:camera-view:1.3.3")
 
-    // ML Kit barcode scanning
-    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
-
-    // Spotify App Remote – will be downloaded by workflow into app/libs
-    implementation(name: 'spotify-app-remote-release-0.8.0', ext: 'aar')
+    implementation("com.google.mlkit:barcode-scanning:17.2.0")
+    implementation("androidx.browser:browser:1.8.0")
 }
